--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -139,7 +139,7 @@
     <div class="PopupDataArea">
       <div class="PopupDataCell">
         <span class="PopupDataTitle">이름</span>
-        <input name="name" type="text" class="PopupDataInput">
+        <input name="name" type="text" class="PopupDataInput createName">
       </div>
       <div class="PopupDataCell">
         <span class="PopupDataTitle">담당업무</span>
@@ -169,6 +169,14 @@
       <div class="PopupDataCell">
         <span class="PopupDataTitle">주소</span>
         <input name="address" type="text" class="PopupDataInput">
+      </div>
+      <div class="PopupDataCell">
+        <span class="PopupDataTitle">아이디</span>
+        <input name="ID" type="text" class="PopupDataInput createID">
+      </div>
+      <div class="PopupDataCell">
+        <span class="PopupDataTitle">비밀번호</span>
+        <input name="PW" type="text" class="PopupDataInput" readonly value="0000">
       </div>
     </div>
     <div class="PopupBtnBox">
@@ -217,6 +225,14 @@
       <div class="PopupDataCell">
         <span class="PopupDataTitle">주소</span>
         <input name="address" type="text" class="PopupDataInput hrAddress">
+      </div>
+      <div class="PopupDataCell">
+        <span class="PopupDataTitle">아이디</span>
+        <input name="address" type="text" class="PopupDataInput hrID">
+      </div>
+      <div class="PopupDataCell">
+        <span class="PopupDataTitle">비밀번호</span>
+        <input name="address" type="text" class="PopupDataInput hrPW">
       </div>
       <input type="hidden" value="" name="id" class="sendToHidden">
     </div>
