--- a/static/css/crudmember/calender.css
+++ b/static/css/crudmember/calender.css
@@ -103,7 +103,7 @@
     padding: 0.4rem;
     border: 0.1rem solid #D2D2D2;
     box-sizing: border-box;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
 }
 
 .today {
@@ -130,10 +130,13 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
-    width: 23rem;
+    width: 100%;
     height: 16rem;
-    padding: 1rem 1rem;
+    padding: 0.6rem;
     box-sizing: border-box;
+}
+.dayDataBoxToday{
+    border: 0.2rem solid #0069D9;
 }
 
 .iconDataBox {
@@ -144,18 +147,6 @@
     height: 3.2rem;
 }
 
-.vehicleAlarm {
-    display: none;
-    justify-content: center;
-    align-items: center;
-    width: 3.2rem;
-    height: 3.2rem;
-    margin-right: 0.6rem;
-    border-radius: 100%;
-    background-color: #707070;
-    cursor: pointer;
-}
-
 .dispatchAlarm {
     display: flex;
     justify-content: center;
@@ -164,6 +155,7 @@
     height: 3.2rem;
     border-radius: 100%;
     background-color: #707070;
+    color: white;
     cursor: pointer;
 }
 
@@ -174,6 +166,18 @@
     align-items: flex-end;
     width: 100%;
     height: 4.8rem;
+    padding: 0.6rem 0;
+}
+
+.dispatchDataBox a {
+    width: 100%;
+    height: 2.4rem;
+    margin: 0.3rem 0;
+}
+
+.blockLink {
+    pointer-events: none;
+    cursor: default;
 }
 
 .dispatchCell {
@@ -183,7 +187,7 @@
     width: 14rem;
     height: 2.4rem;
     padding: 0 0.6rem;
-    border-radius: 0.3rem;
+    border-radius: 0.2rem;
     box-sizing: border-box;
     font-size: 1.4rem;
     cursor: pointer;
@@ -221,18 +225,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 14rem;
+    width: 100%;
     height: 2.4rem;
-    padding: 0 0.6rem;
-    border-radius: 0.3rem;
-    box-sizing: border-box;
+    border-radius: 0.2rem;
     font-size: 1.4rem;
     cursor: pointer;
-    color: #191919;
-}
-
-.dispatchCellInclude:hover {
-    background-color: #DCDCDC;
+    color: white;
+    background-color: #707070;
 }
 
 
@@ -277,6 +276,10 @@
     box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.16);
     transform: translate(-50%, -50%);
 }
+.popupAreaModules .popupContainer{
+    height: 72rem;
+    max-height: initial;
+}
 
 .PopupTitle {
     display: flex;
@@ -298,6 +301,9 @@
     padding: 4.2rem 3rem 3rem 3rem;
     box-sizing: border-box;
     overflow-y: scroll;
+}
+.popupAreaModules .PopupDataArea{
+    max-height: initial;
 }
 
 .PopupDataArea::-webkit-scrollbar {
@@ -357,9 +363,26 @@
 
 .PopupData {
     width: 100%;
+    height: 2rem;
     padding-bottom: 0.1rem;
     font-size: 1.4rem;
     color: #191919;
+    border-bottom: 0.1rem solid #191919;
+}
+.haveDeleteIcon{
+    position: relative;
+    width: 100%;
+}
+.haveDeleteIcon svg{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(0, -50%);
+    cursor: pointer;
+}
+.fakeInput{
+    outline: none;
+    border: none;
     border-bottom: 0.1rem solid #191919;
 }
 
