--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -98,7 +98,7 @@
 
 .tableCell thead td {
     height: 100%;
-    border-bottom: 0.11rem solid #CDCDCE;
+    border-bottom: 0.1rem solid #CDCDCE;
 }
 
 .tableCell tbody {
@@ -113,8 +113,9 @@
 }
 
 .tableCell tbody td {
-    height: 6.8rem;
-    border-bottom: 0.11rem solid #CDCDCE;
+    height: 6.7rem;
+    border-bottom: 0.1rem solid #CDCDCE;
+    box-sizing: border-box;
 }
 
 .tableCell tbody td:nth-child(3) {
@@ -142,7 +143,6 @@
 
 .tableCellScroll thead {
     height: 6.8rem;
-    border-bottom: 0.11rem solid #CDCDCE;
     font-size: 1.6rem;
     font-weight: 700;
     color: #7A7A7A;
@@ -155,10 +155,11 @@
 .tableCellScroll thead td {
     height: 100%;
     padding: 0 2rem;
-    border-bottom: 0.11rem solid #CDCDCE;
+    border-bottom: 0.1rem solid #CDCDCE;
 }
 
 .tableCellScroll tbody {
+    width: 100%;
     font-size: 1.4rem;
     color: #191919;
 }
@@ -168,9 +169,9 @@
 }
 
 .tableCellScroll tbody td {
-    height: 6.8rem;
+    height: 6.7rem;
     padding: 0 2rem;
-    border-bottom: 0.11rem solid #CDCDCE;
+    border-bottom: 0.1rem solid #CDCDCE;
 }
 
 .orderDispatch {
