--- a/vehicle/templates/vehicle/list.html
+++ b/vehicle/templates/vehicle/list.html
@@ -287,7 +287,7 @@
                 <div class="PopupData"></div>
             </div>
             <div class="PopupDataCell">
-                <span class="PopupDataTitle">검사 유효기간</span>
+                <span class="PopupDataTitle">보험 만료일</span>
                 <div class="PopupData"></div>
             </div>
             <div class="PopupDataCell">
